--- a/test/test-auth-server.html
+++ b/test/test-auth-server.html
@@ -16,14 +16,18 @@
             }
         </style>
         <main id="container">
-            <h1>
-                <h4><b>Step 1:</b> Get the Auth URL</h4>
-                <p>Click the button below to get your auth url.</p>
-                <button id="getCode">Get OAuth URL</button>
-                <p id="result"></p>
-                <a id="authURL" href target="_blank">Click to authorise</a>
-                
-            </h1>
+            <h1>OAuth2 Test</h1>
+            <h4><b>Step 1:</b> Get the Auth URL</h4>
+            <p>Click the button below to get your auth url.</p>
+            <button id="getCode">Get OAuth URL</button>
+            <p id="result"></p>
+            <a id="authURL" href target="_blank">Click to authorise</a>
+            <h4>Step 2: Get your code and exchange for an access token</h4>
+            <p>After you're redirected back to your Meet app on GitHub, copy the code from the URI</p>
+            <br/>
+            <label>Code Input<input id="code" type="text" value="" /></label>
+            <button id="getToken">Get Token</button>
+            <p id="accessToken"></p>
         </main>
         <script>
             const getCodeElement = document.getElementById('getCode');
@@ -41,7 +45,28 @@
                         resultElement.innerText = result;
                         resultLink.href = authUrl;
                     })
-            }
+            };
+
+            const codeValue = document.getElementById('code');
+            const getAccessToken = document.getElementById('getToken');
+            const accessTokenElement = document.getElementById('accessToken');
+            const getToken = 'https://hymncvcewd.execute-api.us-east-2.amazonaws.com/dev/api/token';
+
+            getAccessToken.onclick = function () {
+                let code = codeValue.value;
+
+                if (decodeURIComponent(code) === code) {
+                    code = encodeURIComponent(codeValue.value);
+                }
+                const getTokenRequest = getToken + "/" + code;
+                fetch(getTokenRequest)
+                    .then(function (response) {
+                        return response.json();
+                    }).then(function (json) {
+                        accessTokenElement.innerText = JSON.stringify(json);
+                    });
+            };
+
         </script>
     </body>
 </html>
