--- a/test/test-auth-server.html
+++ b/test/test-auth-server.html
@@ -7,6 +7,7 @@
         <title>Test Auth Server</title>
     </head>
     <body>
+
         <style>
             #container {
                 max-width: 500px;
@@ -15,6 +16,7 @@
                 margin-top: 25px;
             }
         </style>
+
         <main id="container">
             <h1>OAuth2 Test</h1>
             <h4><b>Step 1:</b> Get the Auth URL</h4>
@@ -32,7 +34,8 @@
             <button id="getEvents">Get Events</button>
             <p id="events"></p>
         </main>
-        <script>
+
+        <script type="text/javascript">
             const getCodeElement = document.getElementById('getCode');
             const resultElement = document.getElementById('result');
             const resultLink = document.getElementById('authURL');
@@ -76,9 +79,12 @@
 
             getEvents.onclick = function () {
                 const { access_token } = JSON.parse(accessTokenElement.innerText);
+                console.log(access_token);
                 const eventRequest = getCalendarEvents + "/" + access_token;
+                console.log(eventRequest);
                 fetch(eventRequest)
                     .then(function (response) {
+                        console.log(response);
                         return response.json();
                     }).then(function (json) {
                         events.innerText = JSON.stringify(json, null, 2)
