--- a/test/test-auth-server.html
+++ b/test/test-auth-server.html
@@ -82,7 +82,14 @@
                 console.log(access_token);
                 const eventRequest = getCalendarEvents + "/" + access_token;
                 console.log(eventRequest);
-                fetch(eventRequest)
+                fetch(eventRequest, {
+                    method: 'GET',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Access-Control-Allow-Origin': '*',
+                        'Access-Control-Allow-Credentials': true
+                    }
+                })
                     .then(function (response) {
                         console.log(response);
                         return response.json();
