--- a/test/test-auth-server.html
+++ b/test/test-auth-server.html
@@ -56,7 +56,7 @@
             const codeValue = document.getElementById('code');
             const getAccessToken = document.getElementById('getToken');
             const accessTokenElement = document.getElementById('accessToken');
-            const getToken = 'https://hymncvcewd.execute-api.us-east-2.amazonaws.com/dev/api/token';
+            const getToken = 'https://hymncvcewd.execute-api.us-east-2.amazonaws.com/dev/api/token/';
 
             getAccessToken.onclick = function () {
                 const code = codeValue.value.replace('/', '%2F');
@@ -64,7 +64,7 @@
                 // if (decodeURIComponent(code) === code) {
                 //     code = encodeURIComponent(codeValue.value);
                 // }
-                const getTokenRequest = getToken + "/" + code;
+                const getTokenRequest = getToken + code;
                 fetch(getTokenRequest)
                     .then(function (response) {
                         return response.json();
@@ -75,21 +75,14 @@
 
             const getEvents = document.getElementById('getEvents');
             const events = document.getElementById('events');
-            const getCalendarEvents = 'https://hymncvcewd.execute-api.us-east-2.amazonaws.com/dev/api/get-events'
+            const getCalendarEvents = 'https://hymncvcewd.execute-api.us-east-2.amazonaws.com/dev/api/get-events/'
 
             getEvents.onclick = function () {
                 const { access_token } = JSON.parse(accessTokenElement.innerText);
                 console.log(access_token);
-                const eventRequest = getCalendarEvents + "/" + access_token;
+                const eventRequest = getCalendarEvents + access_token;
                 console.log(eventRequest);
-                fetch(eventRequest, {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Access-Control-Allow-Origin': '*',
-                        'Access-Control-Allow-Credentials': true
-                    }
-                })
+                fetch(eventRequest)
                     .then(function (response) {
                         console.log(response);
                         return response.json();
