--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" herf="%PUBLIC_URL%/apple-touch.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" herf="%PUBLIC_URL%/apple-touch-180x180.png"/>
+    <link rel="apple-touch-icon" sizes="57x57" herf="%PUBLIC_URL%/apple-touch-57x57.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
