--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="57x57" herf="%PUBLIC_URL%/apple-touch-57x57.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="Meet App" content="Ann app to discover web development events around the world." />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
     <!--
